# zzz

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  compress.rs  encryption.rs  error.rs  extract.rs  filter.rs  lib.rs  list.rs  main.rs  progress.rs  utils.rs
src/formats/: gz.rs  mod.rs  rar.rs  sevenz.rs  tarball.rs  xz.rs  zip.rs  zstd.rs
tests/: cli_tests.rs  error_tests.rs  format_flag_tests.rs  integration_tests.rs  metadata_tests.rs  multi_format_tests.rs  password_tests.rs  performance_tests.rs  raw_stream_tests.rs
