[package]
name = "zzz"
version = "0.1.0"
edition = "2021"
description = "zzz: compression multitool"
license = "MIT"
repository = "https://github.com/redthing1/zzz"
authors = ["redthing1 <redthing1@alt.icu>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
zstd = "0.13"
tar = "0.4"
walkdir = "2.4"
indicatif = "0.17"
anyhow = "1.0"
glob = "0.3"
num_cpus = "1.16"
once_cell = "1.19.0"
# compression formats
flate2 = "1.0"  # gz
xz2 = "0.1"     # xz
zip = { version = "0.6", features = ["deflate", "time"] }     # zip
sevenz-rust = { version = "0.6", features = ["aes256"] }  # 7z
# magic number detection
tree_magic_mini = "3.1"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"
