[package]
name = "zzz-arc"
version = "0.3.0"
edition = "2021"
description = "A fast compression multitool supporting zst, tgz, txz, zip, and 7z formats with optional encryption"
license = "MIT"
repository = "https://github.com/redthing1/zzz"
authors = ["redthing1 <redthing1@alt.icu>"]
keywords = ["compression", "archive", "zstd", "cli", "encryption"]
categories = ["command-line-utilities", "compression", "encoding"]
readme = "README.md"
homepage = "https://github.com/redthing1/zzz"

[[bin]]
name = "zzz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
zstd = "0.13"
tar = { version = "0.4", features = ["xattr"] }
walkdir = "2.4"
indicatif = "0.17"
anyhow = "1.0"
glob = "0.3"
num_cpus = "1.16"
once_cell = "1.19.0"
xattr = "1.5"
time = "0.3"
filetime = "0.2"
# encryption dependencies
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
# compression formats
flate2 = "1.0"  # gz
xz2 = "0.1"     # xz
zip = { version = "0.6", features = ["deflate", "time"] }     # zip
sevenz-rust = { version = "0.6", features = ["aes256"] }  # 7z
# magic number detection
tree_magic_mini = "3.1"
# rar support (optional)
unrar = { version = "0.5", optional = true }

[features]
default = []
rar = ["unrar"]

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"
