[package]
name = "zzz-arc"
version = "0.4.2"
edition = "2021"
description = "A fast compression multitool supporting zst, tgz, txz, zip, and 7z formats with optional encryption"
license = "MIT"
repository = "https://github.com/redthing1/zzz"
authors = ["redthing1 <redthing1@alt.icu>"]
keywords = ["compression", "archive", "zstd", "cli", "encryption"]
categories = ["command-line-utilities", "compression", "encoding"]
readme = "README.md"
homepage = "https://github.com/redthing1/zzz"

[[bin]]
name = "zzz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
zstd = "0.13.3"
tar = { version = "0.4.44", features = ["xattr"] }
walkdir = "2.5.0"
indicatif = "0.18.3"
anyhow = "1.0.100"
glob = "0.3.3"
num_cpus = "1.17.0"
once_cell = "1.21.3"
xattr = "1.6.1"
time = "0.3.44"
filetime = "0.2.26"
# encryption dependencies
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
# compression formats
flate2 = "1.1.5"  # gz
xz2 = "0.1.7"     # xz
zip = { version = "7.0.0", default-features = false, features = ["aes-crypto", "bzip2", "deflate", "time", "zstd"] }     # zip
sevenz-rust = { version = "0.6.1", features = ["aes256"] }  # 7z
# magic number detection
tree_magic_mini = "3.2.2"
# rar support (optional)
unrar = { version = "0.5.8", optional = true }

[features]
default = []
rar = ["unrar"]

[dev-dependencies]
tempfile = "3.24.0"
assert_cmd = "2.1.1"
predicates = "3.1.3"
